--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -4,6 +4,9 @@
         <p class="title">
           Documentation Page
         </p>
+        <p>
+            <a class="button is-primary" onclick="load('example', '#modal')">Test Modal</a>
+        </p>
       </div>
     </div>
   </section>
